@startuml Brainstorm

class User {
  - id: UUID
  - firstName: String
  - lastName: String
  - email: String
  - ideas: List<Idea>
}

class Idea {
  - id: UUID
  - title: String
  - description: String
  - votes: List<Vote>
}

class Vote {
  - id: UUID
  - user: User
  - timestamp: Date
}

User "1" *-- "*" Idea
Idea "1" *-- "*" Vote
Vote "1" -- "1" User

@enduml

